NO-JIRA make test independent of running container